<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/second_id">

    <Button android:id="@id/button1"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginTop="41dp" android:text="@string/cse"
        android:layout_below="@id/textView1"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />
    <TextView android:textAppearance="?android:textAppearanceLarge" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="86dp"
        android:text="@string/qsn"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="41dp"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:typeface="sans" />
    <Button android:id="@id/button3"
        android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/eee"
        android:layout_below="@id/button1"
        android:layout_alignLeft="@id/button1"
        android:layout_alignStart="@id/button1"
        android:textStyle="bold" />
    <Button android:id="@id/button2"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/ece"
        android:layout_below="@id/button3"
        android:layout_alignLeft="@id/button3"
        android:layout_alignStart="@id/button3"
        android:textStyle="bold" />
    <Button android:id="@id/button4"
        android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mech"
        android:layout_below="@id/button2"
        android:layout_alignLeft="@id/button2"
        android:layout_alignStart="@id/button2"
        android:textStyle="bold" />
</RelativeLayout>